# events-aggregator

./: Dockerfile  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20fb086c4ece_add_tickets_table.py  8f2d7b6a1c4e_event_status_enum.py  99e30667f2d3_add_tickets_table.py  c4cea4f8b589_create_table_syncstate.py  d1ff3e1f469a_add_tickets_table.py  dcf5869bda38_create_table_events_and_places.py
src/: main.py
src/api/: events.py  exception_handlers.py  sync.py  tickets.py
src/application/: exceptions.py
src/application/mappers/: sync_events.py
src/application/ports/: events.py  sync_events.py  tickets.py
src/application/service/: events.py  seats.py  sync_events.py  tickets.py
src/core/: config.py  lifespan.py  logging.py
src/db/: session.py
src/db/models/: events.py  places.py  sync_state.py  tickets.py
src/events_provider/: client.py  paginator.py
src/infrastructure/events_provider/: client.py  paginator.py
src/repositories/: event_repository.py  place_repository.py  sync_state_repository.py  ticket_repository.py
src/schemas/events/: event_query.py  event_status.py  events.py
src/schemas/provider/: provider_event.py  provider_events_page.py  provider_place.py
src/schemas/tickets/: ticket_delete_response.py  ticket_request.py  ticket_response.py
src/tasks/: sync_events.py
tests/unit/api/: test_exception_handlers.py
tests/unit/application/service/: test_sync_events.py  test_tickets.py
tests/unit/infrastructure/events_provider/: test_client.py  test_paginator.py
